# delegates

./: CMakeLists.txt
benchmarks/: CMakeLists.txt
src/: CMakeLists.txt
tests/: CMakeLists.txt
